--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,28 @@ body{
     background-image: linear-gradient(#1b1b1b, black);
 }
 
+.hidden{
+    opacity: 0;
+}
+
 div{
-    display:flex;
     display: flex;
-    padding: 1rem;
     flex-flow: row wrap;
     justify-content: flex-start;
 }
 
 a.vid{
-    flex-basis: 48%;
-    margin: 3% 1%;
-    border-radius: 1%;
+    flex-basis: 31%;
+    margin: 2% 1.16%;
+}
+
+img.border{
+    border: 2px  #262626 solid;
 }
 
 img{
     width: 100%;
-    border-radius: 1%;
+    border-radius: 2%;
 }
 
 h1{
@@ -35,12 +40,8 @@ h1{
 }
 
 a{
-    color: black;
+    color: white;
     text-decoration: none;
-}
-
-a:hover{
-    color: inherit;
 }
 
 footer{
