--- a/css/vidstyle.css
+++ b/css/vidstyle.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -6,35 +6,46 @@
     outline: 0;
 }
 
-body{
+body {
     background-image: linear-gradient(#1b1b1b, black);
 }
 
-h1{
+h1 {
     text-align: center;
     color: white;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    font-size: 35px;
 }
 
-video, iframe{
-    width: 70%;
-    margin-left: 15%;
-    margin-bottom: 200px;
-    max-height: 90vh;
+div.videos{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
 }
 
-iframe{
-    height: 80vh;
+article{
+    flex-basis:65%;
+    margin-left: 17.5%;
+    margin-top: 2%;
+    margin-bottom: 60px;
 }
 
-a{
+video {
+    width: 100%;
+    max-height: 85vh;
+}
+
+iframe {
+    width: 100%;
+    height: 74.6vh;
+}
+
+a {
     color: white;
     text-decoration: none;
     font-size: 20px;
 }
 
-footer{
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,9 +53,9 @@ footer{
     color: white;
     background-color: #1b1b1b;
     height: 60px;
-    text-align: center;   
+    text-align: center;
 }
 
-p{
+p {
     width: 25%;
 }
