--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -6,45 +6,44 @@
     outline: 0;
 }
 
-body{
+body {
     background-image: linear-gradient(#1b1b1b, black);
 }
 
-.hidden{
+.hidden {
     opacity: 0;
 }
 
-div{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
+img.border {
+    border: 2px #262626 solid;
 }
 
-a.vid{
-    flex-basis: 31%;
-    margin: 2% 1.16%;
-}
-
-img.border{
-    border: 2px  #262626 solid;
-}
-
-img{
+img {
     width: 100%;
     border-radius: 2%;
 }
 
-h1{
+h1 {
     text-align: center;
     color: white;
+    font-size: 33px;
 }
 
-a{
+a {
     color: white;
     text-decoration: none;
 }
 
-footer{
+a.link{
+    padding: 0 1%;
+}
+
+a.vid {
+    flex-basis: 31%;
+    margin: 2% 1.16%;
+}
+
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,9 +51,100 @@ footer{
     color: white;
     background-color: #1b1b1b;
     height: 60px;
-    text-align: center;   
+    text-align: center;
 }
 
-p{
+p {
     width: 25%;
+}
+
+iframe {
+    width: 100%;
+    height: 74.6vh;
+}
+
+article {
+    flex-basis: 65%;
+    margin-left: 17.5%;
+    margin-top: 2%;
+    margin-bottom: 60px;
+}
+
+video {
+    width: 100%;
+    max-height: 80vh;
+}
+
+div.videos {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+}
+
+body {
+    background-color: grey;
+}
+
+/* (B) WRAPPER */
+#vWrap {
+    font-family: arial, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    max-width: 70%;
+    margin-left: 15%;
+    margin-top: 40px;
+    background: #484848;
+}
+
+/* (C) VIDEO */
+#vVid {
+    width: 100%;
+}
+
+/* (F1) RANGE SLIDERS */
+/* (F1) HIDE DEFAULT */
+#vWrap input[type="range"] {
+    box-sizing: border-box;
+    appearance: none;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    padding: 0;
+    margin: 0;
+    background: 0;
+}
+
+#vWrap input[type="range"]::-webkit-slider-thumb {
+    appearance: none;
+}
+
+/* (F2) CUSTOM SLIDER TRACK */
+#vWrap input[type=range]::-webkit-slider-runnable-track {
+    background: #626262;
+    border-radius: 10px;
+}
+
+#vWrap input[type=range]::-moz-range-track {
+    background: #626262;
+    border-radius: 10px;
+}
+
+/* (I) PLAYLIST */
+#vList {
+    width: 100%;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    color: #7e7e7e;
+    background: #323232;
+}
+
+.vRow {
+    cursor: pointer;
+    padding: 5px 0;
+}
+
+.vRow.now {
+    color: white;
 }
