--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 
 .hidden {
     opacity: 0;
+    padding: 0;
 }
 
 img.border {
@@ -27,6 +28,7 @@ h1 {
     text-align: center;
     color: white;
     font-size: 33px;
+    padding-bottom: 5px;
 }
 
 a {
@@ -36,12 +38,18 @@ a {
 
 a.link{
     padding: 5px 1%;
-    font-size: 20px;
+    font-size: 17px;
+    text-transform: uppercase;
 }
 
 a.vid {
     flex-basis: 31%;
     margin: 2% 1.16%;
+}
+
+a.source{
+    margin: 0;
+    font-size: 10px;
 }
 
 footer {
