--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ img {
 h1 {
     text-align: center;
     color: darkgray;
-    font-size: 200%;
+    font-size: 1.69vw;
     padding-bottom: 5px;
 }
 
